<resources>
    <string name="app_name">HydroCosm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Sign_In"> Sign In </string>
    <string name="HydroCosmCopyright"> 2021 HydroCosm LLC </string>
    <string name="Sign_Up"> Sign Up </string>
    <string name="AdminSignIn"> Administrator Sign In </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="AlbanyFrontLogo">TODO</string>
    <string name="h2_made_accessible">H2 made Accessible</string>
    <string name="todo">TODO</string>
    <string name="HydroCosmFrontLogo">HydroCosm Logo</string>
    <string name="CopyrightLogo">Copyright Logo</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="Car">Toyota Mirai 2021</string>
    <string name="JoeC">Joe Coffey</string>
    <string name="JoeCEmail">joeC@gmail.com</string>
    <string name="APIKey">AIzaSyDiwLVfwU2d3F3owD48VfVb7GZpCscwgUQ</string>
</resources>