<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/BackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-100dp"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginRight="-100dp"
        android:layout_marginBottom="-10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/photo_1541377913493_addf80b95ded" />

    <EditText
        android:id="@+id/editTextTextUsername"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="-20dp"
        android:layout_marginLeft="-20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/back"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toEndOf="@+id/UsernameCrop"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/back"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUsername" />

    <ImageView
        android:id="@+id/AlbanyLogo"
        android:layout_width="310dp"
        android:layout_height="122dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/AlbanyFrontLogo"
        app:layout_constraintEnd_toEndOf="@+id/BackgroundImage"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BackgroundImage"
        app:srcCompat="@drawable/document" />

    <Button
        android:id="@+id/administratorSignInButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundstyle"
        android:fontFamily="sans-serif"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/AdminSignIn"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="14sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:strokeColor="#000000"
        tools:text="Administrator Sign In" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundstyle"
        android:fontFamily="sans-serif"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/Sign_Up"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="14sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"
        app:strokeColor="#000000"
        tools:text="Sign Up" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="345dp"
        android:layout_height="99dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/HydroCosmFrontLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/administratorSignInButton"
        app:srcCompat="@drawable/test" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/h2_made_accessible"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/BackgroundImage"
        app:layout_constraintStart_toStartOf="@+id/BackgroundImage"
        app:layout_constraintTop_toBottomOf="@+id/AlbanyLogo" />

    <ImageView
        android:id="@+id/CopyrightSymbol"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="-35dp"
        android:layout_marginRight="-35dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/CopyrightLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/HydroCosmCopyright"
        app:srcCompat="@drawable/outline_copyright_black_48dp" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/my_border"
        android:fontFamily="sans-serif"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/Sign_In"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="14sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:text="Sign In" />

    <TextView
        android:id="@+id/HydroCosmCopyright"
        android:layout_width="130dp"
        android:layout_height="18dp"
        android:layout_marginBottom="20dp"
        android:text="@string/HydroCosmCopyright"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="2021 HydroCosm LLC" />

    <ImageView
        android:id="@+id/UsernameCrop"
        android:layout_width="157dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/usernamecroped" />

    <ImageView
        android:id="@+id/PasswordCrop"
        android:layout_width="98dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="-15dp"
        app:layout_constraintStart_toStartOf="@+id/UsernameCrop"
        app:layout_constraintTop_toBottomOf="@+id/UsernameCrop"
        app:srcCompat="@drawable/testsd" />

</androidx.constraintlayout.widget.ConstraintLayout>